objects/zqu__Hosted_Page_Setting__c.object
<CustomObject>
    <description>This object stores the Zuora hosted page configuration settings</description>
    <fields>
        <fullName>zqu__API_Security_Token__c</fullName>
        <description>The API Security Token</description>
        <inlineHelpText>The API Security Token</inlineHelpText>
        <label>API Security Token</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <required>true</required>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>zqu__App_URL__c</fullName>
        <description>The Zuora application URL, for example, &quot;https://www.zuora.com/apps&quot;</description>
        <inlineHelpText>The Zuora application URL</inlineHelpText>
        <label>Zuora Application URL</label>
        <length>175</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__BillingEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Entity</label>
        <referenceTo>zqu__BillingEntity__c</referenceTo>
        <relationshipLabel>Hosted Page Settings</relationshipLabel>
        <relationshipName>HostedPageSettings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Height__c</fullName>
        <defaultValue>&quot;450px&quot;</defaultValue>
        <description>The height of the iFrame</description>
        <inlineHelpText>The height of the iFrame</inlineHelpText>
        <label>iFrame Height</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Page_ID__c</fullName>
        <description>The Zuora Hosted Page ID</description>
        <inlineHelpText>The Zuora Hosted Page ID</inlineHelpText>
        <label>Page ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Tenant_ID__c</fullName>
        <description>Zuora Tenant ID</description>
        <inlineHelpText>Zuora Tenant ID</inlineHelpText>
        <label>Zuora Tenant ID</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__Width__c</fullName>
        <defaultValue>&quot;600px&quot;</defaultValue>
        <description>The width of the iFrame embedded in the Page Method creation page</description>
        <label>iFrame Width</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Hosted Page Setting</label>
    <listViews>
        <fullName>zqu__All</fullName>
        <columns>NAME</columns>
        <columns>zqu__Tenant_ID__c</columns>
        <columns>zqu__Page_ID__c</columns>
        <columns>zqu__App_URL__c</columns>
        <columns>zqu__Height__c</columns>
        <columns>zqu__Width__c</columns>
        <columns>zqu__API_Security_Token__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hosted Page Settings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>